Fixed non overlapping alert
Now the alerts are readable and show on  top of the card text. Also the icons fit better inside the card.

--- a/src/components/MyCards/MyCards.module.css
+++ b/src/components/MyCards/MyCards.module.css
@@ -8,6 +8,7 @@
 
 .icon {
   width: 30px;
+  position:relative;
 }
 
 .plus {
@@ -20,7 +21,7 @@
 }
 
 .iconDescriptionWrapper {
-  width: 100%;
+  width: 90%;
   position: fixed;
   bottom: 5vh;
   margin: 1em;
@@ -47,5 +48,6 @@
 }
 
 .icon:hover + .iconDescriptionWrapper {
+  position: absolute;
   visibility: visible
 }
